// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CellFixedWidth component matches the snapshot 1`] = `
<span
  className="Cell__CellFixedWidth-sc-1w7t3wo-2 lnJAmN Cell__CellBase-sc-1w7t3wo-0 iuCHoB"
>
  This is a cell with a fixed width
</span>
`;

exports[`the CellIcon component matches the snapshot 1`] = `
<span
  className="Cell__CellIcon-sc-1w7t3wo-4 bACaDF Cell__CellFixedWidth-sc-1w7t3wo-2 lnJAmN Cell__CellBase-sc-1w7t3wo-0 cQGhcW"
>
  Icon
</span>
`;

exports[`the CellMinWidth component matches the snapshot 1`] = `
<span
  className="Cell__CellMinWidth-sc-1w7t3wo-3 jQdDIR Cell__CellBase-sc-1w7t3wo-0 eexpst"
>
  This is a call with a min width
</span>
`;

exports[`the CellPrimary component matches the snapshot 1`] = `
<span
  className="Cell__CellPrimary-sc-1w7t3wo-1 fIfjxY Cell__CellBase-sc-1w7t3wo-0 fAUwNZ"
>
  This is a primary cell
</span>
`;

exports[`the CellPrimary with responsiveHeaders matches the snapshot 1`] = `
<span
  className="Cell-sc-1w7t3wo-5 kbKvwG Cell__CellPrimary-sc-1w7t3wo-1 fIfjxY Cell__CellBase-sc-1w7t3wo-0 glhbR"
>
  This is a primary cell with responsive headers
</span>
`;
